<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela_Cadastro_Crianca">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:padding="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/toolbar_meuperfil"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="285dp"
        android:fontFamily="@font/ftitilos"
        android:text="@string/txtnome"
        android:textColor="@color/azul"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/fundo_edittext"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="@font/ftitilos"
        android:text="@string/txtano"
        android:textColor="@color/azul"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtAno"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/fundo_edittext"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinnerNivel"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/fundo_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtPais"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/fundo_edittext"
        android:ems="10"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/fundo_btnc_l"
        android:fontFamily="@font/ftitilos"
        android:text="@string/btn_salvar"
        android:textSize="30sp"
        app:backgroundTint="@color/vermelho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPais" />

    <Button
        android:id="@+id/btnDesemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/fundo_btn_amarelo"
        android:fontFamily="@font/ftitilos"
        android:text="@string/btn_desempenho"
        android:textSize="30sp"
        app:backgroundTint="@color/amarelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvar" />

    <ImageView
        android:id="@+id/imgConfigC"
        android:layout_width="78dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDesempenhoC"
        app:srcCompat="@drawable/ic_settings" />

    <ImageView
        android:id="@+id/imgHomeC"
        android:layout_width="92dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgDesempenhoC"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <ImageView
        android:id="@+id/imgDesempenhoC"
        android:layout_width="206dp"
        android:layout_height="104dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgConfigC"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toEndOf="@+id/imgHomeC"
        app:srcCompat="@drawable/ic_desempenho" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="80dp"
        android:layout_height="31dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAno"
        app:srcCompat="@drawable/t_nivel" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="69dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="305dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerNivel"
        app:srcCompat="@drawable/t_pais" />

</androidx.constraintlayout.widget.ConstraintLayout>
